update the text alignment and fix something wrong with lesson

--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,13 @@ img {
     position: relative;
 }
 
+.h100 p {
+    text-align: left;
+}
+
+figure {
+    text-align: center;
+}
 
 .btn-contain-left {
     left: 63px;
